--- a/src/components/navbar/Style.css
+++ b/src/components/navbar/Style.css
@@ -1,6 +1,28 @@
 .Menu-users{
-    background-color: #d8d9ee;
+    background-color: #6E8BEA;
 }
 .Menu-users-logo{
     -webkit-text-stroke: 0.5px black;
+}
+
+
+.Login-texto p{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    font-size: 13px;
+    color: black;
+}
+
+.Login-texto button{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    border: none;
+    background-color: #6E8BEA;
+}
+.Login-texto a{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
 }
