--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,26 @@
-.App {
-  background-color: white;
-}
+
 *{
   font-family: Arial, Helvetica, sans-serif;
+ 
 
+}
+.Auth-header{
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 5%;
+}
+.Auth-header li{
+  display: inline-block;
+  padding-left: 1%;
 }
 .Auth-form-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(219, 219, 219, 0);
+  background-color: white;
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
 }
 
 .CmanagerLogo {
