--- a/src/styles/Perfil.css
+++ b/src/styles/Perfil.css
@@ -1,14 +1,11 @@
-.Opcoes-menu{
+.Perfil-container{
     display: block;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1000px;
     margin-top: 10%;
 }
-.Opcoes-menu li{
+.Perfil-container li{
     display: inline-block;
     padding-left: 20px;
     margin-bottom: 20px;
-}
-.Opcoes-menu li a{
-    text-decoration: none;
 }
