--- a/src/components/navbar/Style.css
+++ b/src/components/navbar/Style.css
@@ -1,8 +1,9 @@
 .Menu-users{
-    background-color: #6E8BEA;
+    background-color: #cfcfcf;
 }
 .Menu-users-logo{
     -webkit-text-stroke: 0.5px black;
+   
 }
 
 
@@ -19,7 +20,7 @@
     margin: 0;
     text-decoration: none;
     border: none;
-    background-color: #6E8BEA;
+    background-color: #cfcfcf;
 }
 .Login-texto a{
     padding: 0;
