--- a/src/styles/MinhaConta.css
+++ b/src/styles/MinhaConta.css
@@ -13,7 +13,7 @@
     border-width: 2px;
     border-style: solid;
     border-radius: 5%;
-    border-color: #a5b6ee;
-    box-shadow: 5px 5px rgba(134, 133, 133, 0.25);
+    border-color: #737373;
+    box-shadow: 3px 3px rgba(134, 133, 133, 0.25);
     padding: 8%;
 }
