Alterações gerais develop

--- a/src/components/carPessoa/Style.css
+++ b/src/components/carPessoa/Style.css
@@ -2,9 +2,11 @@
     width: 250px;
     height: 250px;
     border-style: solid;
-    border-color: #737373;
+    border-color: #d6d6d6;
+    background-color: white;
+    box-shadow: 1px 1px #f7f7f7;
     border-radius: 5%;
-    border-width: 2px;
+    border-width: 1px;
     text-align: center;
     font-size: larger;
     padding: 2%;
@@ -13,9 +15,9 @@
     cursor: pointer;
 }
 .Container-card-pessoa:hover{
+    border-color: white;
+    box-shadow: 2px 2px #c4c3c3;
     transition: 0.2s;
-    border-color: #2c2a2a;
-   
 }
 .Img-card-pessoa{
     position: absolute;
