--- a/src/components/navbar/Style.css
+++ b/src/components/navbar/Style.css
@@ -1,11 +1,14 @@
 .Menu-users{
-    background-color: #cfcfcf;
+    background-color: #6e8bea;
 }
 .Menu-users-logo{
     -webkit-text-stroke: 0.5px black;
-   
+    color: black;
 }
-
+.Menu-users-logo:hover{
+    -webkit-text-stroke: 0.5px black;
+    color: black;
+}
 
 .Login-texto p{
     padding: 0;
@@ -20,10 +23,12 @@
     margin: 0;
     text-decoration: none;
     border: none;
-    background-color: #cfcfcf;
+    color: black;
+    background-color: transparent;
 }
 .Login-texto a{
     padding: 0;
     margin: 0;
+    color: black;
     text-decoration: none;
 }
