--- a/src/components/card/Style.css
+++ b/src/components/card/Style.css
@@ -7,15 +7,17 @@
 .Card-opcoes{
     width: 200px;
     border-style: solid;
-    border-color: #737373;
+    border-color: #d6d6d6;
+    box-shadow: 1px 1px #f7f7f7;
     border-radius: 5%;
     text-align: center;
     display: block;
-    border-width: 2px;
+    border-width: 1px;
     background-color: white;
 }
 
 .Card-opcoes:hover{
-    border-color: #2c2a2a;
+    border-color: white;
+    box-shadow: 2px 2px #c4c3c3;
     transition: 0.4s;
 }
