--- a/src/components/cardUsuario/Style.css
+++ b/src/components/cardUsuario/Style.css
@@ -2,18 +2,20 @@
     width: 250px;
     height: 250px;
     border-style: solid;
-    border-color: #737373;
+    border-color: #d6d6d6;
+    box-shadow: 1px 1px #f7f7f7;
     border-radius: 5%;
-    border-width: 2px;
+    border-width: 1px;
     text-align: center;
     font-size: larger;
     padding: 2%;
     padding-top: 10%;
     position: relative;
     cursor: pointer;
+    background-color: white;
 }
 .Container-card-usuario:hover{
-    transition: 0.2s;
-    border-color: #2c2a2a;
-   
+    border-color: white;
+    box-shadow: 2px 2px #c4c3c3;
+    transition: 0.4s;
 }
