--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,9 @@
  
 
 }
+body{
+  background-color: rgb(248, 248, 248);
+}
 .Auth-header{
   display: block;
   margin: 0 auto;
@@ -18,9 +21,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  flex-direction: row;
   width: 100vw;
-  height: 50vh;
+  height: 100vh;
+  margin: 0 auto;
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(110,139,234,0.2413340336134454) 0%, rgba(110,139,234,0.15449929971988796) 74%);
 }
 
 .CmanagerLogo {
